Fixes #9 - Toolbar z-index

--- a/src/ColumnsBlock/styles.less
+++ b/src/ColumnsBlock/styles.less
@@ -108,6 +108,7 @@
 
 .block-toolbar {
   position: absolute;
+  z-index: 2;
   left: 0px;
   display: flex;
   border: none;
